--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+.blue {
+  color: #1676bc;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -85,4 +89,253 @@
 .footer-content .section2 {
   color: white;
   font-size: 11px;
+}
+
+.landing-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  background-color: #d9d9d9;
+  position: relative;
+}
+
+/* 사이드 버튼 */
+.landing-page .side-button-container {
+  position: absolute;
+  left: 0px;
+  top: 15%;
+  transform: translateY(-100%);
+  display: flex;
+  font-weight: 400;
+  font-size: 1em;
+}
+
+.landing-page .side-button-container .section1 {
+  display: flex;
+  flex-direction: column;
+}
+
+.landing-page .side-button {
+  background-color: #fff;
+  color: #1676bc;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: bold;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.landing-page .side-button-container .section2 {
+  border-radius: 0 15px 15px 0;
+  color: #fff;
+  background-color: #1676bc;
+  writing-mode: vertical-rl;
+  text-align: center;
+  padding: 10px;
+}
+
+.landing-page .side-button:hover {
+  background-color: #1876bc;
+}
+
+.landing-page .main-content {
+  text-align: center;
+  width: 100%;
+}
+
+.landing-page .main-title {
+  font-size: 1.5em;
+  color: #1876bc;
+}
+
+.landing-page .highlight {
+  color: #1876bc;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4); /* 2px 오른쪽, 2px 아래, 4px 흐림, 반투명 검정색 */
+}
+
+.landing-page .main-subtitle {
+  font-size: 2.5em;
+  color: #fff;
+  margin-top: 10px;
+}
+
+.landing-page .search-bar {
+  display: flex;
+  align-items: center;
+  background-color: #f2f2f2;
+  border-radius: 10px;
+  padding: 10px;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.landing-page .category-select {
+  width: 110px;
+  border: none;
+  background: transparent;
+  font-size: 16px;
+  color: #333;
+  padding: 10px;
+  outline: none;
+  margin-right: 10px; /* 입력 필드와 간격 */
+  cursor: pointer;
+}
+
+.landing-page .search-icon {
+  height: 24px;
+  border-left: 1px solid #ccc; /* 오른쪽 테두리 추가 */
+  padding-left: 10px;
+}
+
+.landing-page .search-input {
+  flex-grow: 1; /* 남은 공간 채우기 */
+  border: none;
+  padding: 10px;
+  font-size: 16px;
+  outline: none;
+  background: transparent;
+}
+
+.landing-page .search-button {
+  border: none;
+  background: transparent;
+  font-size: 16px;
+  color: #111111;
+  cursor: pointer;
+  padding: 10px;
+  outline: none;
+}
+
+.landing-page .search-button:hover {
+  color: #333; /* 마우스 오버 시 색상 변경 */
+}
+
+.news-section {
+  margin: 100px;
+  text-align: center;
+}
+
+.news-section .title {
+  text-align: left;
+}
+
+.news-section .title p {
+  font-size: 1.5em;
+  font-family: "Times New Roman", Times, serif;
+  margin: 0px;
+}
+
+.news-section img {
+  width: 100%;
+}
+
+.news-section .title .more {
+  border: none;
+  background: none;
+  padding-left: 30px;
+}
+
+.news-section .title .more img {
+  width: 50px;
+}
+
+.news-section .theme-seclect {
+  margin: 50px;
+}
+
+.news-section .content {
+  display: flex;
+  margin: 20px 100px;
+}
+
+.news-section .content .img-section {
+  flex: 60%;
+  padding: 10px;
+}
+
+.news-section .content .text-section {
+  flex: 40%;
+  text-align: left;
+  padding: 20px 30px;
+}
+
+.news-section .content .text-section .title {
+  font-weight: bold;
+}
+
+.news-section .content .text-section .nav {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.news-section .content .text-section .nav button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.news-section .content .text-section .nav img {
+  width: 10px;
+}
+
+.news-section .content .text-section .nav span {
+  font-size: 1em;
+  color: #1676bc;
+}
+
+.news-section .theme-select {
+  align-items: center;
+  width: 100%;
+  padding: 20px 0;
+}
+
+.news-section .theme-select button {
+  background: none;
+  border: none;
+  font-size: 1em;
+  cursor: pointer;
+  color: #888;
+  position: relative;
+  padding: 5px;
+  margin: 10px;
+}
+
+.news-section .theme-select button.active {
+  font-weight: bold;
+  color: black; /* 활성화된 버튼의 글자색 */
+  border-bottom: 1px solid #ddd; /* 하단에 구분선을 추가 */
+}
+
+.news-section .theme-select button.active::after {
+  border-bottom: 1px solid #ddd; /* 하단에 구분선을 추가 */
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: black; /* 밑줄 색상 */
+  position: absolute;
+  bottom: -5px; /* 밑줄의 위치 */
+  left: 0;
+}
+
+.news-section .theme-select button:hover {
+  color: black; /* 마우스를 올렸을 때 글자색 변경 */
+  border-bottom: 1px solid #ddd; /* 하단에 구분선을 추가 */
+  font-weight: bold;
+}
+
+.news-section .content .text-section .more {
+  border: none;
+  background: none;
+  color: #888;
+  text-decoration: underline;
+  padding: 0;
 }
