--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,3 @@
-.blue {
-  color: #1676bc;
-}
-
-.gray {
-  color: #ccc;
-}
-
 .header {
   display: flex;
   justify-content: space-between;
@@ -603,4 +595,102 @@
 
 .lawvax-map-section .content .map-section {
   flex: 60%;
+}
+
+.lawvax-map-section .call span {
+  display: flex;
+  align-items: center;
+}
+
+.lawvax-map-section .call img {
+  height: 20px;
+  padding-right: 10px;
+}
+
+.lawvax-map-section .traffic p {
+  display: flex;
+  align-items: center;
+}
+
+.lawvax-map-section .traffic img {
+  height: 20px;
+  padding-right: 10px;
+}
+
+.lawvax-map-section .map-section {
+  align-items: center;
+  display: flex;
+}
+
+.lawvax-map-section .map-section img {
+  margin: 50px;
+  width: 100%;
+  height: 100%;
+}
+
+.members-page {
+}
+
+.members-page .process {
+  display: flex;
+  align-items: center;
+  margin: 5% 10%;
+}
+
+.members-page .process img {
+  width: 24px;
+}
+
+.members-page .process span {
+  padding-left: 15px;
+}
+
+.members-page .title-section .sub-title {
+  margin: 5% 10%;
+}
+
+.members-page .search-bar-wrap {
+  background-color: #f9f9f9;
+  padding: 5% 25%;
+}
+
+.members-page .search-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #ccc;
+  background-color: white;
+}
+
+.members-page .search-bar .category-select {
+  width: 110px;
+  border: none;
+  background: transparent;
+  font-size: 16px;
+  color: #333;
+  padding: 10px;
+  outline: none;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.members-page .search-bar .category-select {
+  flex: 3;
+  font-size: 0.8em;
+}
+
+.members-page .search-bar input {
+  flex: 6;
+  border: none;
+  padding: 10px;
+  font-size: 16px;
+  outline: none;
+  background: transparent;
+}
+
+.members-page .search-bar img {
+  flex: 1;
+  height: 20px;
+  padding-right: 10px;
+  padding-top: 3px;
 }
