feat. 랜딩페이지 로백스 카카오맵

--- a/src/style.css
+++ b/src/style.css
@@ -595,6 +595,7 @@
 
 .landing-page .lawvax-map-section .content .map-section {
   flex: 60%;
+  padding: 0 5%;
 }
 
 .landing-page .lawvax-map-section .call span {
