--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,27 @@
   margin: 0px;
   line-height: 0.8;
 }
+
+a {
+  text-decoration: none;
+}
+
+/* 뉴스레터 */
+
+.newsletter-page {
+  margin: 5% 10%;
+}
+
+.newsletter-page .process {
+  display: flex;
+  align-items: center;
+}
+
+.newsletter-page .process img {
+  width: 24px;
+}
+
+.newsletter-page .process span {
+  padding-left: 15px;
+  color: #999999;
+}
