--- a/src/style.css
+++ b/src/style.css
@@ -239,6 +239,7 @@
   border: none;
   background: none;
   padding-left: 30px;
+  cursor: pointer;
 }
 
 .landing-page .news-section .title .more img {
@@ -339,6 +340,7 @@
   color: #888;
   text-decoration: underline;
   padding: 0;
+  cursor: pointer;
 }
 
 .landing-page .newsletter-section {
@@ -361,6 +363,7 @@
   border: none;
   background: none;
   padding-left: 30px;
+  cursor: pointer;
 }
 
 .landing-page .newsletter-section .title .more img {
@@ -430,6 +433,7 @@
 
 .landing-page .newsletter-section .newsletter-content .bottom .more {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .landing-page .hired-section {
@@ -452,6 +456,7 @@
   border: none;
   background: none;
   padding-left: 30px;
+  cursor: pointer;
 }
 
 .landing-page .hired-section .title .more img {
